force-app/main/default/objects/OrgHealthSeverityConfig__mdt/OrgHealthSeverityConfig__mdt.object-meta.xml
<CustomObject>
    <label>Org Health Severity Config</label>
    <pluralLabel>Org Health Severity Configs</pluralLabel>
    <description>Custom Metadata Type that maps each severity level to its score deduction. Allows tuning severity impact without Apex changes.</description>
</CustomObject>