force-app/main/default/objects/OrgHealthSeverityConfig__mdt/fields/GradeImpact__c.field-meta.xml
<CustomField>
    <fullName>GradeImpact__c</fullName>
    <label>Grade Impact</label>
    <type>Text</type>
    <length>100</length>
</CustomField>