force-app/main/default/objects/OrgHealthSeverityConfig__mdt/fields/ScoreDeduction__c.field-meta.xml
<CustomField>
    <fullName>ScoreDeduction__c</fullName>
    <label>Score Deduction</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>