force-app/main/default/objects/OrgHealthSeverityConfig__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>